kubernetes-files/controller/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /arrayify/
        backend:
          serviceName: arrayify
          servicePort: 80
      - path: /reverse/
        backend:
          serviceName: reverse
          servicePort: 80
      - path: /toupper/
        backend:
          serviceName: toupper
          servicePort: 80
